--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Google Maps example customized</title>
-
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyCHjAxdgZjTD2pCsFsG28xrRpoR16fV0vM"></script>
+    <script type="text/javascript" src="boring.js"></script>
+    <script type="text/javascript" src="maps.js"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=" + key></script>
     <script>
         if ("geolocation" in navigator) {
             navigator.geolocation.getCurrentPosition(function(position) {
